--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "recharts": "^2.12.7",
+    "yahoo-finance2": "^3.10.2",
     "zod": "^3.23.8"
   },
   "devDependencies": {
